fix: too much to write in one sentence.

--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -62,6 +62,10 @@ div[class^="actionButtons-"] {
   [class*="lookLink-"][class*="colorPrimary-"] {
     color: $text;
   }
+  [class*="lookFilled-"][class*="colorTransparent-"] {
+    color: $text;
+    background-color: $surface0;
+  }
 }
 
 // dangerous button when hovered is colored properly
